--- a/portofolio.html
+++ b/portofolio.html
@@ -70,7 +70,7 @@
         <div class="section-title">
           <h2>Portfolio</h2>
           <p>
-            Karya - Karya yang perna saya buat, berupa poster, photo, logo.
+            Karya - Karya yang pernah saya buat, berupa poster, photo, logo.
           </p>
         </div>
 
