Fix table is not showing properly in smartphone view

--- a/jadwalku.html
+++ b/jadwalku.html
@@ -71,8 +71,7 @@
         <div class="section-title">
           <h2>Jadwal Kuliah</h2>
         </div>    
-        <div class="row " data-aos="fade-up" data-aos-delay="100">
-          <div class="col-md-10 p-5 ">
+        <div class="row table-yeet" data-aos="fade-up" data-aos-delay="100">
             <table class="table table-bordered">
               <thead>
                 <tr>
@@ -181,7 +180,6 @@
       
               </tbody>
             </table>
-          </div>
 
       </div>
     </section>
